syntax = "proto3";

package auction.auction;

option go_package = "auction/x/auction/types";

message FinalizeAuction {
  string creator = 1;
  uint64 id = 2;
  uint64 auctionID = 3;
  uint64 bidID = 4;
  string finalPrice = 5;
  string winner = 6;
}